# mcp-code-exec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
engine/: audit.py  config.py  context.py  executor.py  pool.py  session.py  utils.py
