[project]
name = "mcp-code-exec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
test = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.7",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
]
